# CS535_GraphSearch

./: CMakeLists.txt  Timing_results.csv  graph_renderer.py
applications/: CMakeLists.txt  graph.c  main.cpp  regular.c  unified.cu
references/: DirectionOptimizingBFS_Notes.txt  OptimalAlgebraicBFS_Notes.txt
source/: CMakeLists.txt  allocate_for_cuda_bfs.c  allocate_for_cuda_bfs.h  bfs_openacc.cpp  bfs_openacc.hpp  bfs_parallel_cpu.cpp  bfs_parallel_cpu.hpp  bfs_parallel_stl.cpp  bfs_parallel_stl.hpp  bfs_sequential.cpp  bfs_sequential.hpp  book_bfs.cu  coloring.hpp  cuda_regular_bfs.cu  cuda_regular_bfs.h  cuda_unified_bfs.cu  cuda_unified_bfs.h  error_checker.h  graph.c  graph.h  graph.hpp  graph_utilities.hpp  library.cu  library.cuh  origin_bfs.cu  regular.cu  sparse_matrix.hpp  test.txt  timing.hpp  unified.cu  warp_queue_bfs.cu  warp_queue_bfs.h
source/graphs/: coloring.cpp  coloring.hpp  graph.cpp  graph.hpp  graph_utilities.cpp  graph_utilities.hpp  sparse_matrix.cpp  sparse_matrix.hpp
